# tictactoe

./:  README.md  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.gitlab/merge_request_templates/: default.md
TicTacToe/: Dockerfile  app.py  config.py
TicTacToe/api/: controller.py  db.py  models.py  platform_client.py
TicTacToe/engine/: gamestate.py  mcts_agent.py
app/: main.py
app/api/v1/: routes_datasets.py  routes_games.py  routes_selfplay.py
app/application/: __init__.py  analytics_models.py  dtos.py  mappers.py  ml_dataset_service.py  use_cases.py
app/core/: config.py  db.py  dependencies.py
app/domain/: __init__.py  entities.py  interfaces.py  logic.py  models.py  services.py  value_objects.py
app/infra/: ai_client.py  orm_models.py
app/infrastructure/: __init__.py  orm_models.py
app/infrastructure/analytics/: selfplay_repository.py
app/infrastructure/persistence/: __init__.py  mappers.py  repositories.py
app/infrastructure/services/: __init__.py  ai_service.py  game_state_serializer.py  ml_service.py  (+1 more)
app/schemas/: game.py  move.py
app/services/: ai_client.py  game_service.py  game_state_mapper.py  platform_client.py  state_serializer.py
init-scripts/sql/: 002_tictactoe_schema.sql
migrations/: create_analytics_table.sql
tests/: api.http  conftest.py  test_ai_service.py  test_game_rules.py  test_game_service.py  test_game_state_mapper.py  test_logic.py  test_platform_client.py  test_platform_service.py  test_state_serializer.py  test_use_cases.py
(+2 files in other folders)
