[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe-backend"
version = "0.1.0"
description = "TicTacToe Game Backend"
dependencies = [
    "fastapi==0.121.2",
    "SQLAlchemy==2.0.44",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "requests==2.32.5",
    "uvicorn[standard]",
    "psycopg2-binary==2.9.9",
    "pytest==9.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]